feat: add feature sorting by date.